# llm-resume-audit

./: .env.example  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  Makefile  README.md  pyproject.toml  requirements.lock.txt
config/: occupations.toml  seeds.toml
outputs/: osf_deviation_note.md  osf_evidence.json  osf_prereg.md  phase8_deferred.md  results_summary.md
outputs/final_paper/: final_paper_llm_resume_audit.md  final_paper_llm_resume_audit.tex
scripts/: _float_diagnostic.py  _main_batch.py  run_glm45_diagnostic.sh  run_main_batch.sh  run_phase10_name_signal_check.py  run_phase10_role_regime.py  run_phase7_cate.py  run_phase7_mht.py  run_phase7_ols.py  run_phase8_borda.py  run_phase8_direct_zhipu.sh  run_phase8_drift.py  run_phase8_placebo.py  run_phase9_reporting.py
src/llm_audit/: job_descriptions.py  name_corpus.py  onet_loader.py  resume_factory.py  schema.py  stratifier.py  treatment_injector.py
src/llm_audit/analysis/: borda.py  cate.py  mht.py  ols.py  robustness.py
src/llm_audit/scoring/: base.py  batch_runner.py  gemini_client.py  groq_client.py  zhipu_client.py
src/llm_audit/utils/: io.py  prompts.py
templates/: resume.j2
tests/: test_job_descriptions.py  test_name_corpus.py  test_occupations_config.py  test_onet_loader.py  test_resume_factory.py  test_scaffold.py  test_schema.py  test_stratifier.py  test_treatment_injector.py
tests/analysis/: test_borda.py  test_cate.py  test_mht.py  test_ols.py  test_robustness.py
tests/fixtures/: resume_000.txt  resume_449.txt
tests/scoring/: test_base.py  test_zhipu_helpers.py
tests/utils/: test_io.py  test_prompts.py
