[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================================
# Project metadata
# ============================================================================
[project]
name = "llm-audit"
version = "0.0.1"
description = "Factorial audit of demographic bias in LLM résumé screeners (Proposal A; midterm phase)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yuheng Li" }]
keywords = [
  "causal-inference",
  "potential-outcomes",
  "audit-study",
  "large-language-models",
  "algorithmic-fairness",
  "generalized-random-forest",
]

# --- Core runtime dependencies ---
dependencies = [
  # Data
  "pandas>=2.2,<3.0",
  "pyarrow>=15.0",
  "numpy>=1.26,<2.0",        # econml currently lags numpy 2.x on some wheels
  "scipy>=1.12",
  "pydantic>=2.6,<3.0",
  "python-dotenv>=1.0",
  "tomli>=2.0; python_version < '3.11'",

  # Templating
  "Faker>=24.0",
  "Jinja2>=3.1",

  # LLM SDKs (four-provider roster: Zhipu, Google AI Studio, Groq)
  "zhipuai>=2.1",
  "google-generativeai>=0.8",
  "groq>=0.11",

  # Statistics / causal inference
  "statsmodels>=0.14",
  "linearmodels>=6.0",
  "scikit-learn>=1.4,<2.0",
  "econml>=0.15",

  # Plotting
  "matplotlib>=3.8",

  # Utilities
  "tqdm>=4.66",
  "tenacity>=8.2",           # retry-with-backoff for API calls
]

# --- Optional dev dependencies ---
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-xdist>=3.5",
  "pytest-mock>=3.12",
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-requests",
]

# Proposal source (local-only): /mnt/c/Obsidian/note/Data Mining/proposal_final_A.tex
# (Omitted from [project.urls] because setuptools requires http/https for that table.)

# ============================================================================
# Setuptools — package discovery
# ============================================================================
[tool.setuptools.packages.find]
where = ["src"]
include = ["llm_audit*"]

# ============================================================================
# Ruff — lint
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "B",   # bugbear
  "W",   # pycodestyle warnings
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # line length handled by black/format
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]  # allow snake_case test names with caps

# ============================================================================
# Black — format
# ============================================================================
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

# ============================================================================
# Mypy — type check
# ============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
files = ["src", "tests"]

# Vendor SDKs lacking complete type stubs
[[tool.mypy.overrides]]
module = [
  "zhipuai.*",
  "google.generativeai.*",
  "groq.*",
  "econml.*",
  "linearmodels.*",
  "statsmodels.*",
  "faker.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest — test runner + coverage
# ============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--cov=src/llm_audit",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-fail-under=80",
]
markers = [
  "live: integration test that hits a real provider API (skipped unless LLM_AUDIT_LIVE=1)",
  "slow: tests that take >5 seconds",
]

[tool.coverage.run]
branch = true
source = ["src/llm_audit"]
omit = ["src/llm_audit/scoring/__init__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
